--- a/Internet of Things/pubspec.yaml
+++ b/Internet of Things/pubspec.yaml
@@ -33,11 +33,15 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
+  http: ^0.13.4
   cupertino_icons: ^1.0.2
   lottie: ^1.2.2
   provider: ^6.0.2
   intl: ^0.17.0
   curved_navigation_bar: ^1.0.3
+  flutter_local_notifications: ^9.5.2
+  firebase_core: ^1.2.0
+  firebase_database: ^7.0.0
 
 dev_dependencies:
   flutter_test:
@@ -82,6 +86,9 @@ flutter:
     - family: Averta
       fonts:
         - asset: fonts/AvertaStd-Bold.ttf
+    - family: Koulen
+      fonts:
+        - asset: fonts/Koulen-Regular.ttf
   #   - family: Trajan Pro
   #     fonts:
   #       - asset: fonts/TrajanPro.ttf
